# bitsteam

./: .gitignore  LICENSE  README.md  pyproject.toml
bitsteam/: __init__.py  deck.py
bitsteam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: MAPPING_NOTES.md
examples/: simple_usage.py
tests/: test_deck.py
tools/: bit_hunter.py  dashboard.py  smoke_capture.py
